tests/js_error/source_locations/destructure/object/get_named_property.exp
Error: 
  ┌ tests/js_error/source_locations/destructure/object/get_named_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at get foo (tests/js_error/source_locations/destructure/object/get_named_property.js:3:11)
  at <global> (tests/js_error/source_locations/destructure/object/get_named_property.js:7:7)