tests/js_error/source_locations/destructure/object/get_named_property.js
var obj = {
  get foo() {
    throw new Error();
  }
};

var { foo: x } = obj;